--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Clase 3</title>
 
     <style>
+      body {
+        background-color: #fff3ff;
+      }
       button {
         border: 0px;
         padding: 0.5rem;
@@ -16,7 +19,7 @@
       }
       .class_container {
         text-align: left;
-        background-color: #d7d7d7;
+        background-color: #e5dbe5;
         padding: 1rem;
         margin-top: 2rem;
         border-radius: 5px;
@@ -24,12 +27,26 @@
       code {
         border-radius: 5px;
       }
-      .class_container{
+      .class_container {
         font-size: 13px;
+      }
+
+      .hljs {
+        background: #ffff !important;
+        transition: 0.2s;
+      }
+      #page_title {
+        padding-left: 5rem;
       }
     </style>
   </head>
   <body>
+    <div>
+      <div style="display: block">
+        <h1 id="page_title">Clase 3 JavaScript</h1>
+      </div>
+      <h5 style="text-align:right;padding-right:1rem;">Me emocione un poco con la tarea</h5>
+    </div>
     <div>
       <div class="class_container">
         Generar una función que le ingrese por parámetro algún dato ya sea ingresado por el usuario o declarado
