added repo link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         background: #ffff !important;
         transition: 0.2s;
       }
-      #header{
+      #header {
         background: #a227cd;
         color: rgb(221, 221, 221);
         margin: 0;
@@ -48,11 +48,10 @@
         margin: 0;
         display: inline-block;
         padding: 1rem;
-        background:hsla(284, 62%, 85%, 0.193);
+        background: hsla(284, 62%, 85%, 0.193);
         margin-left: 5rem;
         margin-top: 1rem;
         border-radius: 3px;
-        
       }
       .text_container {
         max-width: 70%;
@@ -68,10 +67,18 @@
         display: block;
         padding: 1rem;
       }
-      small{
-        color:rgb(108, 108, 108);
+      .right_header {
+        text-align: right;
+        padding-right: 1rem;
+        padding-bottom: 1rem;
+        margin: 0;
       }
-      
+      a {
+        color: rgb(221, 221, 221);
+      }
+      small {
+        color: rgb(108, 108, 108);
+      }
     </style>
   </head>
   <body>
@@ -79,7 +86,12 @@
       <div style="display: block">
         <h1 id="page_title">Clase 3 JavaScript</h1>
       </div>
-      <h5 style="text-align: right; padding-right: 1rem;padding-bottom: 1rem; margin:0">Me emocione un poco con la tarea</h5>
+      <div class="right_header">
+        <h5>
+          <a href="https://github.com/thiagosch/arg_prog_class_3">Repo (codigo)</a>
+        </h5>
+        <h5>Me emocione un poco con la tarea</h5>
+      </div>
     </div>
     <div>
       <div class="class_container">
