--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           tiene 30 o 31 días.
           <br />
         </div>
-        <button onclick="ejercicio_10()">Ejercicio nº 10</button>
+        <button onclick="ejercicio_10_a()">Ejercicio nº 10</button>
         <pre><code id="ejercicio_10_a"></code></pre>
         <pre><code id="ejercicio_10_b"></code></pre>
       </div>
